--- a/index.html
+++ b/index.html
@@ -1,164 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <header>
-        <nav>
-          <a href=""><img src="./img/Logo.svg" alt="logo"></a>
-        <ul>
-            <li> <a href="">About</a> </li>           
-            <li> <a href="">Services and prices</a> </li>
-            <li> <a href="">Barbers</a> </li>
-            <li> <a href="">Contacts</a> </li>
-        </ul>  
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body class="site-body">
+    <header class="header">
+      <div class="container header-container">
+        <nav class="main-navigation">
+          <a href="" class="main-logo"
+            ><img src="./img/Logo.svg" alt="logo"
+          /></a>
+          <ul class="list list-navigation">
+            <li class="item-navigation">
+              <a href="" class="link link-navigation">About</a>
+            </li>
+            <li class="item-navigation">
+              <a href="" class="link link-navigation">Services and prices</a>
+            </li>
+            <li class="item-navigation">
+              <a href="" class="link link-navigation">Barbers</a>
+            </li>
+            <li class="item-navigation">
+              <a href="" class="link link-navigation">Contacts</a>
+            </li>
+          </ul>
         </nav>
-        <a href="tel:+380441111111">+38 044 111 11 11</a>
-        <button type="button">Online-booking</button>
+        <a href="tel:+380441111111" class="link header-tell"
+          >+38 044 111 11 11</a
+        >
+        <button type="button" class="hero-button btn">Online-booking</button>
+      </div>
     </header>
     <main>
-        <section>
-            <ul>
-                <li><a href="" target="_blank" rel="noopener noreferer nofollow">Instagram</a></li>
-                <li><a href="" target="_blank" rel="noopener noreferer nofollow">Youtube</a></li>
-            </ul>
-            <p>A hair salon for men in Kyiv</p>
-            <h1>BarberShop</h1>
-            <p>We are experts in trendy men’s haircuts.
-                We work quickly, carefully and with style.</p>
-        </section>
-        <section>
-            <ul>
-                <li><img src="./img/about-img1.jpg" alt="barber haircut" width="270" height="445"></li>
-                <li><img src="./img/about-img2.jpg" alt="barber haircut" width="270" height="445"></li>
-            </ul>
-            <p>About</p>
-            <h2>Best Barbershop in your city</h2>
-            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
-            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
-            <button type="button">Online-booking</button>
-        </section>
-        <section>
-            <p>Spend your time with the best masters</p>
-            <h2>Services and prices</h2>
-           <ul>
-            <li>
+      <section class="hero">
+        <div class="container">
+          <ul class="hero-list">
+            <li class="hero-item">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferer nofollow"
+                class="link"
+                >Instagram</a
+              >
+            </li>
+            <li class="hero-item">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferer nofollow"
+                class="link"
+                >Youtube</a
+              >
+            </li>
+          </ul>
+         <div class="hero-wrap">
+            <p class="hero-pre-title">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-after-title">
+              We are experts in trendy men’s haircuts. We work quickly, carefully
+              and with style.
+            </p>
+         </div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="container">
+          <ul class="about-list">
+            <li class="list about-item">
+              <img
+                src="./img/about-img1.jpg"
+                alt="barber haircut"
+                width="270"
+                height="445"
+              />
+            </li>
+            <li class="list about-item">
+              <img
+                src="./img/about-img2.jpg"
+                alt="barber haircut"
+                width="270"
+                height="445"
+              />
+            </li>
+          </ul>
+          <div class="about-textcontent">
+            <p class="about-pre">About</p>
+            <h2 class="about-title">Best Barbershop in your city</h2>
+            <p class="about-after-title">
+              If you want to add more confidence to your image, you should
+              definitely visit us.
+            </p>
+            <p class="about-text">
+              We are a team that never stops at what has been achieved and are
+              thirsty for changes. And when you fall into the hands of our
+              master, you will never be the same again. We are a team that is
+              always "on the same wave" with clients. Therefore, we are always
+              ready to improve everyone who comes to us!
+            </p>
+            <button type="button" class="about-button btn">Online-booking</button>
+          </div>
+        </div>
+      </section>
+      <section class="prices">
+        <div class="container">
+          <p class="prices-pre-title">Spend your time with the best masters</p>
+          <h2 class="prices-title">Services and prices</h2>
+          <div class="prices-wrap">
+            <ul class="prices-list">
+              <li class="list prices-item">
                 <p>Men’s haircut</p>
                 <p>from 300 uah.</p>
-            </li>
-            <li>
+              </li>
+              <li class="list prices-item">
                 <p>Beard trim</p>
                 <p>from 300 uah.</p>
-            </li>
-            <li>
+              </li>
+              <li class="list prices-item">
                 <p>Mustache trim</p>
                 <p>from 200 uah.</p>
-            </li>
-            <li>
+              </li>
+              <li class="list prices-item">
                 <p>Straight razor shave</p>
                 <p>from 200 uah.</p>
-            </li>
-           </ul>
-           <ul>
-            <li>
+              </li>
+            </ul>
+            <ul class="prices-list">
+              <li class="list prices-item">
                 <p>Trainee’s haircut</p>
                 <p>from 50 uah.</p>
-            </li>
-            <li>
+              </li>
+              <li class="list prices-item">
                 <p>Haircut under the nozzle</p>
                 <p>from 200 uah.</p>
-            </li>
-            <li>
+              </li>
+              <li class="list prices-item">
                 <p>Children’s haircut (0-12 y.o.)</p>
                 <p>from 300 uah.</p>
-            </li>
-            <li>
+              </li>
+              <li class="list prices-item">
                 <p>Camouflage of gray hair</p>
                 <p>from 200 uah.</p>
+              </li>
+            </ul>
+          </div>
+          <button type="button" class="btn prices-button">Online-booking</button>
+        </div>
+      </section>
+      <section class="benefits">
+        <div class="container">
+          <ul class="list benefits-list">
+            <li class="benefits-item">
+              <span>600</span>
+              <p>Satisfied customers per day</p>
             </li>
-           </ul>
-           <button type="button">Online-booking</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <span>600</span>
-                    <p>Satisfied customers per day</p>
-                </li>
-                <li>
-                    <span>50</span>
-                    <p>Awards for excellent service</p>
-                </li>
-                <li>
-                    <span>20</span>
-                    <p>Kyiv’s best 
-                        barbers</p>
-                </li>
-                <li>
-                    <span>100</span>
-                    <p>Gifts for regular customers</p>
-                </li>
-            </ul>
-            <p>Old traditional school</p>
-            <h2>¿Why people come to us?</h2>
-            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
-        </section>
-        <section>
-            <p>For true enjoyers of the atmosphere</p>
-            <h2>Our barbers</h2>
-            <ul>
-                <li>
-                    <img src="./img/our_barber_img1-min.jpg" alt="our barber 1" width="370" height="346" >
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
-                </li>
-                <li>
-                    <img src="./img/our_barber_img2-min.jpg" alt="our barber 2" width="370" height="346">
-                    <h3>Michele Doe</h3>
-                    <p>Extreme Barber</p>
-                </li>
-                <li>
-                    <img src="./img/our_barber_img3-min.jpg" alt="our barber 3" width="370" height="346" >
-                    <h3>Alan Black</h3>
-                    <p>Extreme Barber</p>                    
-                </li>
-            </ul>
-        </section>
-        <section>
-            <p>In Latin, "barba" means "beard"</p>
-            <ul>
-                <li><img src="./img/galiery_img1.jpg" alt="" width="270" height="360"></li>
-                <li><img src="./img/galiery_img2.jpg" alt="" width="270" height="360"></li>
-                <li><img src="./img/galiery_img3.jpg" alt="" width="270" height="360"></li>
-                <li><img src="./img/galiery_img4.jpg" alt="" width="270" height="360"></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Online-booking</h2>
-        </section>
-        <section>
-            <h2>Contacts</h2>
-            <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/ktynv82xL6xWz7TUA" target="_blank" rel="noopener noreferrer nofollow">st. Vasilkivska, 7A <br> Kyiv, 08132</a></li>
-                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
-                </ul>               
-            </address>
-            <p>Working hours</p>
-            <p>Every day from 9:00 to 22:00</p>
-        </section>
+            <li>
+              <span>50</span>
+              <p>Awards for excellent service</p>
+            </li>
+            <li class="benefits-item">
+              <span>20</span>
+              <p>Kyiv’s best barbers</p>
+            </li>
+            <li class="benefits-item">
+              <span>100</span>
+              <p>Gifts for regular customers</p>
+            </li>
+          </ul>
+          <p class="benefits-pre-title">Old traditional school</p>
+          <h2 class="benefits-title">¿Why people come to us?</h2>
+          <p class="benefits-after-title">
+            Only good things are said about us. But it's better to see and feel
+            1 time than read 10 times.
+          </p>
+        </div>
+      </section>
+      <section class="barbers">
+        <div class="container">
+          <p class="barbers-pre-title">For true enjoyers of the atmosphere</p>
+          <h2 class="barbers-title">Our barbers</h2>
+          <ul class="barbers-list">
+            <li class="list barbers-item">
+              <img
+                src="./img/our_barber_img1-min.jpg"
+                alt="our barber 1"
+                width="370"
+                height="346"
+              />
+              <div class="barbers-contant">
+                <h3 class="barbers-name">John Smith</h3>
+                <p class="barbers-types">Extreme Barber</p>
+              </div>
+            </li>
+            <li class="list barbers-item">
+              <img
+                src="./img/our_barber_img2-min.jpg"
+                alt="our barber 2"
+                width="370"
+                height="346"
+              />
+              <div class="barbers-contant">
+                <h3 class="barbers-name">Michele Doe</h3>
+                <p class="barbers-types">Extreme Barber</p>
+              </div>
+            </li>
+            <li class="list barbers-item">
+              <img
+                src="./img/our_barber_img3-min.jpg"
+                alt="our barber 3"
+                width="370"
+                height="346"
+              />
+              <div class="barbers-contant">
+                <h3 class="barbers-name">Alan Black</h3>
+                <p class="barbers-types">Extreme Barber</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <p>In Latin, "barba" means "beard"</p>
+          <ul>
+            <li>
+              <img
+                src="./img/galiery_img1.jpg"
+                alt=""
+                width="270"
+                height="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/galiery_img2.jpg"
+                alt=""
+                width="270"
+                height="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/galiery_img3.jpg"
+                alt=""
+                width="270"
+                height="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/galiery_img4.jpg"
+                alt=""
+                width="270"
+                height="360"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <h2>Online-booking</h2>
+      </section>
+      <section>
+        <h2>Contacts</h2>
+        <address>
+          <ul>
+            <li>
+              <a
+                href="https://goo.gl/maps/ktynv82xL6xWz7TUA"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link"
+                >st. Vasilkivska, 7A <br />
+                Kyiv, 08132</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
+            </li>
+            <li>
+              <a href="mailto:barbershop@email.com" class="link"
+                >barbershop@email.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <p>Working hours</p>
+        <p>Every day from 9:00 to 22:00</p>
+      </section>
     </main>
     <footer>
-        <p> &copy;Copyright 2020</p>
-        <ul>
-            <li><a href="" target="_blank" rel="noopener noreferer nofollow">Instagram</a></li>
-            <li><a href="" target="_blank" rel="noopener noreferer nofollow">Youtube</a></li>
-        </ul>
+      <p>&copy;Copyright 2020</p>
+      <ul>
+        <li>
+          <a
+            href=""
+            target="_blank"
+            rel="noopener noreferer nofollow"
+            class="link"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href=""
+            target="_blank"
+            rel="noopener noreferer nofollow"
+            class="link"
+            >Youtube</a
+          >
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
