--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="gallery">
         <div class="container">
-          <p>In Latin, "barba" means "beard"</p>
-          <ul>
-            <li>
+          <p class="gallery-text">In Latin, "barba" means "beard"</p>
+          <ul class="gallery-list">
+            <li class="list gallery-item">
               <img
                 src="./img/galiery_img1.jpg"
                 alt=""
@@ -248,7 +248,7 @@
                 height="360"
               />
             </li>
-            <li>
+            <li class="list gallery-item">
               <img
                 src="./img/galiery_img2.jpg"
                 alt=""
@@ -256,7 +256,7 @@
                 height="360"
               />
             </li>
-            <li>
+            <li class="list gallery-item">
               <img
                 src="./img/galiery_img3.jpg"
                 alt=""
@@ -264,7 +264,7 @@
                 height="360"
               />
             </li>
-            <li>
+            <li class="list gallery-item">
               <img
                 src="./img/galiery_img4.jpg"
                 alt=""
