--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
               >
             </li>
           </ul>
-         <div class="hero-wrap">
+          <div class="hero-wrap">
             <p class="hero-pre-title">A hair salon for men in Kyiv</p>
             <h1 class="hero-title">BarberShop</h1>
             <p class="hero-after-title">
-              We are experts in trendy men’s haircuts. We work quickly, carefully
-              and with style.
+              We are experts in trendy men’s haircuts. We work quickly,
+              carefully and with style.
             </p>
-         </div>
+          </div>
         </div>
       </section>
       <section class="about">
@@ -115,7 +115,9 @@
               always "on the same wave" with clients. Therefore, we are always
               ready to improve everyone who comes to us!
             </p>
-            <button type="button" class="about-button btn">Online-booking</button>
+            <button type="button" class="about-button btn">
+              Online-booking
+            </button>
           </div>
         </div>
       </section>
@@ -161,7 +163,9 @@
               </li>
             </ul>
           </div>
-          <button type="button" class="btn prices-button">Online-booking</button>
+          <button type="button" class="btn prices-button">
+            Online-booking
+          </button>
         </div>
       </section>
       <section class="benefits">
@@ -207,6 +211,29 @@
               <div class="barbers-contant">
                 <h3 class="barbers-name">John Smith</h3>
                 <p class="barbers-types">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-instagram"></use>
+                        </svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list barbers-item">
@@ -219,6 +246,29 @@
               <div class="barbers-contant">
                 <h3 class="barbers-name">Michele Doe</h3>
                 <p class="barbers-types">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-instagram"></use>
+                        </svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list barbers-item">
@@ -231,6 +281,29 @@
               <div class="barbers-contant">
                 <h3 class="barbers-name">Alan Black</h3>
                 <p class="barbers-types">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-instagram"></use>
+                        </svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-twitter"></use></svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-facebook"></use></svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link"
+                      ><svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
