--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <main>
       <section class="hero">
         <div class="container">
-          <ul class="hero-list">
-            <li class="hero-item">
+          <ul class="hero-list list  ">
+            <li class="hero-item pre-title">
               <a
                 href=""
                 target="_blank"
@@ -72,7 +72,7 @@
             </li>
           </ul>
           <div class="hero-wrap">
-            <p class="hero-pre-title">A hair salon for men in Kyiv</p>
+            <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
             <h1 class="hero-title">BarberShop</h1>
             <p class="hero-after-title">
               We are experts in trendy men’s haircuts. We work quickly,
@@ -102,7 +102,7 @@
             </li>
           </ul>
           <div class="about-textcontent">
-            <p class="about-pre">About</p>
+            <p class="about-pre pre-title">About</p>
             <h2 class="about-title">Best Barbershop in your city</h2>
             <p class="about-after-title">
               If you want to add more confidence to your image, you should
@@ -121,45 +121,47 @@
           </div>
         </div>
       </section>
+
+      <!-- --------Prices--------- -->
       <section class="prices">
         <div class="container">
-          <p class="prices-pre-title">Spend your time with the best masters</p>
+          <p class="prices-pre-title pre-title">Spend your time with the best masters</p>
           <h2 class="prices-title">Services and prices</h2>
           <div class="prices-wrap">
             <ul class="prices-list">
               <li class="list prices-item">
-                <p>Men’s haircut</p>
-                <p>from 300 uah.</p>
+                <p class="prices-item-text">Men’s haircut</p>
+                <p class="prices-item-text">from 300 uah.</p>
               </li>
               <li class="list prices-item">
-                <p>Beard trim</p>
-                <p>from 300 uah.</p>
+                <p class="prices-item-text">Beard trim</p>
+                <p class="prices-item-text">from 300 uah.</p>
               </li>
               <li class="list prices-item">
-                <p>Mustache trim</p>
-                <p>from 200 uah.</p>
+                <p class="prices-item-text">Mustache trim</p>
+                <p class="prices-item-text">from 200 uah.</p>
               </li>
               <li class="list prices-item">
-                <p>Straight razor shave</p>
-                <p>from 200 uah.</p>
+                <p class="prices-item-text">Straight razor shave</p>
+                <p class="prices-item-text">from 200 uah.</p>
               </li>
             </ul>
             <ul class="prices-list">
               <li class="list prices-item">
-                <p>Trainee’s haircut</p>
-                <p>from 50 uah.</p>
+                <p class="prices-item-text">Trainee’s haircut</p>
+                <p class="prices-item-text">from 50 uah.</p>
               </li>
               <li class="list prices-item">
-                <p>Haircut under the nozzle</p>
-                <p>from 200 uah.</p>
+                <p class="prices-item-text">Haircut under the nozzle</p>
+                <p class="prices-item-text">from 200 uah.</p>
               </li>
               <li class="list prices-item">
-                <p>Children’s haircut (0-12 y.o.)</p>
-                <p>from 300 uah.</p>
+                <p class="prices-item-text">Children’s haircut (0-12 y.o.)</p>
+                <p class="prices-item-text">from 300 uah.</p>
               </li>
               <li class="list prices-item">
-                <p>Camouflage of gray hair</p>
-                <p>from 200 uah.</p>
+                <p class="prices-item-text">Camouflage of gray hair</p>
+                <p class="prices-item-text">from 200 uah.</p>
               </li>
             </ul>
           </div>
@@ -172,33 +174,35 @@
         <div class="container">
           <ul class="list benefits-list">
             <li class="benefits-item">
-              <span>600</span>
-              <p>Satisfied customers per day</p>
-            </li>
-            <li>
-              <span>50</span>
-              <p>Awards for excellent service</p>
+              <span class="count">600</span>
+              <p class="benefits-item-text">Satisfied customers per day</p>
             </li>
             <li class="benefits-item">
-              <span>20</span>
-              <p>Kyiv’s best barbers</p>
+              <span class="count">50</span>
+              <p class="benefits-item-text">Awards for excellent service</p>
             </li>
             <li class="benefits-item">
-              <span>100</span>
-              <p>Gifts for regular customers</p>
+              <span class="count">20</span>
+              <p class="benefits-item-text">Kyiv’s best barbers</p>
+            </li>
+            <li class="benefits-item">
+              <span class="count">100</span>
+              <p class="benefits-item-text">Gifts for regular customers</p>
             </li>
           </ul>
-          <p class="benefits-pre-title">Old traditional school</p>
-          <h2 class="benefits-title">¿Why people come to us?</h2>
-          <p class="benefits-after-title">
-            Only good things are said about us. But it's better to see and feel
-            1 time than read 10 times.
-          </p>
+          <div class="benefits-wrap">
+            <p class="benefits-pre-title pre-title">Old traditional school</p>
+            <h2 class="benefits-title">¿Why people come to us?</h2>
+            <p class="benefits-after-title">
+              Only good things are said about us. But it's better to see and feel
+              1 time than read 10 times.
+            </p>
+          </div>
         </div>
       </section>
       <section class="barbers">
         <div class="container">
-          <p class="barbers-pre-title">For true enjoyers of the atmosphere</p>
+          <p class="barbers-pre-title pre-title">For true enjoyers of the atmosphere</p>
           <h2 class="barbers-title">Our barbers</h2>
           <ul class="barbers-list">
             <li class="list barbers-item">
@@ -311,7 +315,7 @@
       </section>
       <section class="gallery">
         <div class="container">
-          <p class="gallery-text">In Latin, "barba" means "beard"</p>
+          <p class="gallery-text pre-title">In Latin, "barba" means "beard"</p>
           <ul class="gallery-list">
             <li class="list gallery-item">
               <img
